# dummy_finder

./: .env.example  .gitignore  README.md  pyproject.toml
app/DummyFinder/: ContentView.swift  DummyFinderApp.swift  Models.swift  SearchViewModel.swift
app/DummyFinder.xcodeproj/: project.pbxproj
app/DummyFinder.xcodeproj/project.xcworkspace/xcuserdata/nisargthakkar.xcuserdatad/: UserInterfaceState.xcuserstate
app/DummyFinder.xcodeproj/xcuserdata/nisargthakkar.xcuserdatad/xcschemes/: xcschememanagement.plist
app/DummyFinder/Backend/: FolderWatcher.swift  PythonBridge.swift
app/DummyFinder/Resources/Assets.xcassets/Accent.colorset/: Contents.json
app/DummyFinder/Resources/Assets.xcassets/AccentSoft.colorset/: Contents.json
app/DummyFinder/Resources/Assets.xcassets/AppAccentColor.colorset/: Contents.json
app/DummyFinder/Resources/Assets.xcassets/Border.colorset/: Contents.json
app/DummyFinder/Resources/Assets.xcassets/Card.colorset/: Contents.json
app/DummyFinder/Resources/Assets.xcassets/Surface.colorset/: Contents.json
app/DummyFinder/Resources/Assets.xcassets/TagAudio.colorset/: Contents.json
app/DummyFinder/Resources/Assets.xcassets/TagImage.colorset/: Contents.json
app/DummyFinder/Resources/Assets.xcassets/TagPDF.colorset/: Contents.json
app/DummyFinder/Resources/Assets.xcassets/TagText.colorset/: Contents.json
app/DummyFinder/Views/: HeaderBar.swift  ResultsArea.swift  SearchBar.swift  StatusBar.swift
dummy_finder/: __init__.py  cli.py  config.py  db.py  embedder.py  helpers.py  ingest.py  search.py
(+4 files in other folders)
